<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AddItemType.AddItemType">

    <TextView
        android:id="@+id/newItemType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_item_type"
        android:layout_marginTop="32dp"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/addNewItemType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:hint="@string/please_write_item_type"
        android:inputType="text"
        android:textSize="24sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/saveItem"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addNewItemType"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/save"
        android:textSize="20sp"
        android:padding="10dp"
        android:background="@drawable/buttons"
        android:visibility="invisible"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/addItemrecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/saveItem"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        android:nestedScrollingEnabled="true"
        tools:ignore="UnusedAttribute">

    </androidx.recyclerview.widget.RecyclerView>

</RelativeLayout>