<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ShopItem.ShopItemForUserAdapter">

    <androidx.cardview.widget.CardView
        android:id="@+id/ManagecardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#4895ED"
            android:padding="8dp">

            <TextView
                android:id="@+id/manageItemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/item_name"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qty"
                android:layout_toStartOf="@+id/quantity"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/quantityText"
                android:text="@string/_1"
                android:layout_toStartOf="@+id/quantity"
                android:layout_marginEnd="20dp"
                android:layout_alignParentEnd="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="RelativeOverlap" />

            <EditText
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:id="@+id/quantity"
                android:text="@string/_1"
                android:inputType="number"
                android:layout_alignParentEnd="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginEnd="20dp"
                android:autofillHints=""
                tools:ignore="LabelFor,RelativeOverlap"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:layout_below="@+id/manageItemName"
                android:textColor="@color/white"
                android:layout_marginStart="20dp"
                android:textSize="16sp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/manageItemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/manageItemName"
                android:layout_toEndOf="@+id/price"
                android:layout_marginStart="10dp"
                android:text="@string/price"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/totalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_price"
                android:layout_below="@+id/manageItemName"
                android:layout_toStartOf="@+id/manageItemtotalPrice"
                android:layout_marginEnd="10dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/manageItemtotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/manageItemName"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:text="@string/total_price"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/manageItemAddToCart"
                android:layout_below="@+id/manageItemPrice"
                android:textSize="24sp"
                android:text="@string/add_to_cart"
                android:textColor="@color/white"
                android:layout_marginStart="20dp"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/manageItemOrderNow"
                android:layout_below="@+id/manageItemPrice"
                android:layout_alignParentEnd="true"
                android:textSize="24sp"
                android:text="@string/order_now"
                android:textColor="@color/white"
                android:layout_marginEnd="20dp"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>